# Pyramid-API

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
core/db/: connection.py  create_tabels.py  tables.py
models/: base_model.py  category.py  product.py  user.py
routes/: category.py  deps.py  product.py  user.py
services/: category.py  product.py  user.py
services/exceptions/: exceptions.py
test/: conftest.py
test/routes/: test_category_route.py  test_product_route.py  test_user_route.py
test/services/: test_category_service.py  test_product_service.py  test_user_service.py
